[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[tool.poetry]
name = "must-gather-explorer"
version = "0.1.0"
description = "Tool to explore must-gather data"
authors = ["Jenia Peimer <jpeimer@redhat.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.2"
click = "^8.1.7"
rich = "^13.8.0"
poetry-dynamic-versioning = "^1.4.1"
pyhelper-utils = "^0.0.41"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
must-gather-explorer = "app.main:main"
