[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[project]
name = "must-gather-explorer"
version = "0.1.2"
description = "Tool to explore must-gather data"
authors = [{ "name" = "Jenia Peimer", "email" = "jpeimer@redhat.com" }]
license = { "text" = "Apache-2.0 license" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.7",
  "pyhelper-utils>=0.0.42",
  "pyyaml>=6.0.2",
  "rich>=13.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
must-gather-explorer = "app.main:main"
